--- a/ApiGateway/src/ELCLite.ApiGateway.Api/appsettings.Development.json
+++ b/ApiGateway/src/ELCLite.ApiGateway.Api/appsettings.Development.json
@@ -2,7 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ClientSettings": {
+    "Name": "ELCLite",
+    "ConnectionString": "Data Source=HOME-DEV-PC\\SQL2016;Initial Catalog=SecuredAPI_V2;Integrated Security=SSPI;ConnectRetryCount=0;TrustServerCertificate=true;"
   }
 }
