--- a/CoreApp/src/ELCLite.CoreApp.Api/ELCLite.CoreApp.Api.csproj
+++ b/CoreApp/src/ELCLite.CoreApp.Api/ELCLite.CoreApp.Api.csproj
@@ -7,4 +7,9 @@
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ELCLite.CoreApp.Domain\ELCLite.CoreApp.Domain.csproj" />
+    <ProjectReference Include="..\ELCLite.CoreApp.Infrastructure\ELCLite.CoreApp.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
