--- a/CoreApp/src/ELCLite.CoreApp.Domain/ELCLite.CoreApp.Domain.csproj
+++ b/CoreApp/src/ELCLite.CoreApp.Domain/ELCLite.CoreApp.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\src\ELCLite.SharedKernel\ELCLite.SharedKernel.csproj" />
+  </ItemGroup>
+
 </Project>
