add encryption ket configuration

--- a/ApiGateway/src/ELCLite.ApiGateway.Api/appsettings.Development.json
+++ b/ApiGateway/src/ELCLite.ApiGateway.Api/appsettings.Development.json
@@ -10,5 +10,9 @@
   "ClientSettings": {
     "Name": "ELCLite",
     "ConnectionString": "Data Source=HOME-DEV-PC\\SQL2016;Initial Catalog=SecuredAPI_V2;Integrated Security=SSPI;ConnectRetryCount=0;TrustServerCertificate=true;"
+  },
+  "IdentitySettings": {
+    "EncryptionKey": "My JWT Encryption Key-My JWT Encryption Key",
+    "ConnectionString": "Data Source=HOME-DEV-PC\\SQL2016;Initial Catalog=SecuredAPI_V2;Integrated Security=SSPI;ConnectRetryCount=0;TrustServerCertificate=true;"
   }
 }
