--- a/ApiGateway/src/ELCLite.ApiGateway.Api/appsettings.json
+++ b/ApiGateway/src/ELCLite.ApiGateway.Api/appsettings.json
@@ -10,5 +10,9 @@
   "ClientSettings": {
     "Name": "ELCLite",
     "ConnectionString": ""
+  },
+  "IdentitySettings": {
+    "EncryptionKey": "",
+    "ConnectionString": ""
   }
 }
